# Chess

./: .gitignore  CMakeLists.txt  Favicon.cpp  Favicon.h  Texture.cpp  Texture.h  board.cpp  board.h  convert_texture.ps1  main.cpp  move.cpp  move.h  piece.cpp  piece.h
Core/: board.cpp  board.h  game.cpp  game.h  move.cpp  move.h  notation.cpp  notation.h  piece.cpp  piece.h  renderer.cpp  renderer.h
cmake/: FindSFML.cmake
